--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
       <div class="typing-content">
         <div class="typing-textarea">
-          <textarea id="chat-input" spellcheck="false" placeholder="Enter your question with respect to repository here" required></textarea>
+          <textarea id="chat-input" spellcheck="true" placeholder="Enter your question with respect to repository here" required></textarea>
           <span id="send-btn" class="material-symbols-rounded">send</span>
         </div>
         <div class="typing-controls">
